adding .csv download capability

--- a/bower.json
+++ b/bower.json
@@ -22,6 +22,8 @@
     "angular-route": "^1.5.8",
     "angular-data-table": "^0.7.0",
     "checklist-model": "^0.10.0",
-    "font-awesome": "fontawesome#^4.6.3"
+    "font-awesome": "fontawesome#^4.6.3",
+    "angular-sanitize": "^1.5.8",
+    "ng-csv": "^0.3.6"
   }
 }
