--- a/package.json
+++ b/package.json
@@ -19,8 +19,11 @@
     "gulp-less": "^3.1.0",
     "gulp-minify": "0.0.14",
     "gulp-uglify": "^2.0.0",
+    "jsonwebtoken": "^7.1.9",
     "less": "^2.7.1",
     "mssql": "^3.3.0",
+    "passport": "^0.3.2",
+    "passport-token": "^0.1.3",
     "pump": "^1.0.1"
   }
 }
