enabled animations for modals and field selection collapsed div

--- a/bower.json
+++ b/bower.json
@@ -24,6 +24,7 @@
     "checklist-model": "^0.10.0",
     "font-awesome": "fontawesome#^4.6.3",
     "angular-sanitize": "^1.5.8",
-    "ng-csv": "^0.3.6"
+    "ng-csv": "^0.3.6",
+    "angular-animate": "^1.5.8"
   }
 }
