--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "config": {
+    "unsafe-perm": true
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -11,6 +14,7 @@
   "dependencies": {
     "bluebird": "^3.4.6",
     "body-parser": "^1.15.2",
+    "bower": "^1.7.9",
     "bunyan": "^1.8.1",
     "express": "^4.14.0",
     "gulp": "^3.9.1",
@@ -23,6 +27,7 @@
     "jsonwebtoken": "^7.1.9",
     "less": "^2.7.1",
     "mssql": "^3.3.0",
+    "mysql": "^2.11.1",
     "passport": "^0.3.2",
     "passport-token": "^0.1.3",
     "pm2": "^2.0.12",
