--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "body-parser": "^1.15.2",
     "bower": "^1.7.9",
     "bunyan": "^1.8.1",
+    "chai": "^3.5.0",
     "express": "^4.14.0",
     "gulp": "^3.9.1",
     "gulp-concat": "^2.6.0",
@@ -27,6 +28,7 @@
     "gulp-uglify": "^2.0.0",
     "jsonwebtoken": "^7.1.9",
     "less": "^2.7.1",
+    "mocha": "^3.0.2",
     "mssql": "^3.3.0",
     "mysql": "^2.11.1",
     "passport": "^0.3.2",
